--- a/www/real-estate-staging-intensive-3-day.htm
+++ b/www/real-estate-staging-intensive-3-day.htm
@@ -4,9 +4,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <!-- InstanceBeginEditable name="head-content" -->
-<meta name="title" content="Real Estate Staging Training Workshop, an Intensive Class to Help You Start a Home Staging Business" />
-<meta name="description" content="Home staging training, real estate staging training, take the School of Interior Redesign's Real Estate Staging for the Professional class to add home staging and real estate staging to your real estate, design or redesign business" />
-<meta name="keywords" content="home staging training,real estate staging training,teleclasses,home staging business,home study,real estate staging workshops,staging classes,learn staging,home stagers,real estate stagers,certificate program in staging,start a staging business,learn staging at home,CT,Connecticut,MA,Massachusetts,Ann Anderson,The School of Interior Redesign" />
+<meta name="title" content="Real Estate Staging Training Workshop, an Intensive Home Staging Training Class to Start a Staging Business" />
+<meta name="description" content="Real Estate Staging Training, the Home Staging Training Intensive workshop at the School of Interior Redesign is approved by the State of CT's Commissioner of Higher Education, ideal for those wanting to start a staging business" />
+<meta name="keywords" content="real estate staging training,home staging training,staging,training,education,workshops,classes,teleclasses,home staging business,real estate staging business,home study,staging classes,CT,Connecticut,MA,Massachusetts,learn staging,home stagers,real estate stagers,certificate program in staging,start a business,Ann Anderson,The School of Interior Redesign" />
 <!-- InstanceEndEditable -->
 <link href="styles/SIR_style.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
@@ -33,9 +33,7 @@
   ga('send', 'pageview');
 
 </script>
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Home Staging Training Workshop, a Real Estate Staging Training Class: Incorporate Staging into Your Business</title>
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" --><title>Real Estate Staging Training Workshop, an Intensive Home Staging Training Class: Start a Staging Business</title><!-- InstanceEndEditable -->
 </head>
 
 <body>
@@ -99,60 +97,42 @@
           <td bgcolor="#000000" align="left" valign="top" class="navbar"><img src="images/black_line.jpg" width="6" /></td>
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
-            <h1 align="center">Real Estate Staging for the Professional</h1>
-            <!-- real estate staging training and home staging training -->
-            <p class="course-description">A real estate staging training (home staging training)
-              class offering you a choice of 2 or 2-1/2 days of training</p>
-            <p><strong>Are you interested in enhancing your current
-              business by offering Real Estate Staging?&nbsp;</strong> Then this
-              real estate staging training workshop is perfect for you!&nbsp; Designed
-              for the professional who is currently in business but would like
-              to add home staging to his or her repertoire, this home staging training
-              workshop will give you the information necessary to help homes
-              sell quickly and for top dollar.</p>
-            <p>Because we all have different goals as well as different levels
-              of experience in&nbsp; Real Estate Staging, this class
-              can be taken as 2 or 2-1/2 days.</p>
-            <h2>Day One: Real Estate Staging Training for the Professional </h2>
-            <!-- real estate staging training and home staging training -->
-            <p>Day one of this real estate staging training (home staging training)
-              class consists of all classroom time to give us the opportunity to
-              discuss the following topics:</p>
-            <ul type="disc">
-              <li><img src="images/staging_bedroom.jpg" alt="Real estate staging training and home staging training: the School of Interior Redesign's Real Estate Staging for the Professional training workshop is offered with a one-or-two-day option and is ideal for anyone interested in enhancing your current interior design, decorating, or real estate related business by offering home staging services." width="250" height="166" hspace="6" vspace="12" align="right" />The
-                philosophy of home staging </li>
-              <li>Addressing house &lsquo;hot spots&rsquo; </li>
-              <li>Specifics on differentiating your house from others on the market</li>
-              <li>Decorating for the &lsquo;model home&rsquo; look</li>
-              <li>Vacant home staging</li>
-            </ul>
-            <h2>Day Two: Real Estate Staging Training for the Professional </h2>
-            <!-- real estate staging training and home staging training -->
-            <p>While this may be enough information for some, others will be interested
-              in attending the second day of real estate staging training (home
-              staging training), during which we will cover:</p>
-            <ul type="disc">
-              <li>An in-home hands-on home staging</li>
-              <li>Staging Services</li>
-              <li>Client Relationships</li>
-            </ul>
-            <h2>Optional 1/2 Day: Real Estate Staging Training for the Professional</h2>
-            <p>If you would like to learn creative marketing for your new service, add another half day to the workshop!</p>
-            <p align="center"><a href="questions-interior-redesign-staging-training.htm"><em><strong>Click
-              here for the questions you should ask...and </strong></em><br />
-              <em><strong>what you should know about training and certification</strong></em></a><em><strong>.</strong></em></p>
-            <h2>To Enroll in the Staging for the Professional Class:</h2>
-            <!-- real estate staging training and home staging training -->
-            <p><strong>Cost for the 2 day Real Estate Staging Training (home staging training) for the Professional training workshop is $1,000, cost for the 2-1/2 day (days 1 and 2 plus marketing) is $1,250.</strong> Cost includes all of the above, as well as lunch, and beverages and snacks each day.</p>
-            <blockquote>
-              <p><strong>To see the schedule of real estate staging training (home staging training) classes</strong>, check the <a href="course-schedule.htm">Class Schedule</a>&nbsp; for more information.</p>
-              <p><strong>To reserve your space in any interior redesign training or real estate staging class</strong>, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit it, along with your <a href="payment.htm">deposit of $500</a>. The balance is due two weeks prior to the start of class. One day classes must be paid in full at the time of enrollment.</p>
-            </blockquote>
-            <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" -->
-            <p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p>
-            <!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" -->
-            <p align="center"><strong>For more information on any interior redesign training workshop</strong>, email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign LLC at <strong><a href="tel:203-783-1556">(203) 783-1556</a></strong> or <strong><a href="tel:877-814-0518">(877) 814-0518</a></strong> toll-free.</p>
-            <!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
+          <h1>Real Estate Staging Intensive</h1>
+          <p class="course-description">A 3 day Real Estate Staging Training<br />(home staging training) Workshop</p>
+          <p>Looking to start a business in home staging? Then this <strong>Certificate program</strong> in <strong>real estate staging</strong> (also called <strong>home staging</strong>), which has been <strong>approved by the Commissioner of Higher Education for the State of Connecticut</strong>, is just what you need!</p>
+          <p>During this 3 day real estate staging training (home staging training) program you will learn how to help your clients prepare their homes to sell quickly and for top dollar.</p>
+          <p>To do this, we will discuss the following:</p>
+          <ul>
+            <li><img src="images/staging_bathrm.jpg" width="215" height="166" align="right" />The philosophy of real estate staging </li>
+            <li>What is truly important in preparing a home for sale </li>
+            <li>Specific information on how to differentiate this home from others on the market both inside and out </li>
+            <li>Vacant home staging </li>
+            <li>Decorating for the &quot;model home&quot; look</li>
+          </ul>
+          <p>In addition to the specific information on preparing a home for sale, we will discuss the business aspect of real estate staging, including:</p>
+          <ul>
+            <li>How to attract customers </li>
+            <li>Maintaining client relationships </li>
+            <li>Specific marketing tools to use to open doors </li>
+            <li>Steps to take to begin your business and move it forward in the coming years.</li>
+          </ul>
+          <p>But we&rsquo;re not done yet...as part of our home staging training, we will have the opportunity to use our new found skills as we use the principles of real estate staging to prepare a home for sale!</p>
+          <p><strong>That&rsquo;s not all! </strong>At the end of your real estate staging training course, you will receive:</p>
+          <ul>
+            <li>A Certificate of Completion in Real Estate Staging</li>
+            <li>On-going support whenever you would like, as you embark on your exciting new career.</li>
+            <li>Membership eligibility for the Association of Design Education. The ADE will continue to provide you the on-going educational support you will need as you start and grow your business.</li>
+          </ul>
+          <p><strong><em>Click here for <a href="questions-interior-redesign-staging-training.htm">answers to frequently asked questions</a> and for more information on what you should know about training and certification.</em></strong></p>
+          <h2>Enroll in the Real Estate Staging Intensive Class</h2>
+          <p>The cost for this intensive 3 day real estate staging training (home staging training) workshop is $1,500, which includes all of the above, as well as lunch, and beverages and snacks each day. Please check our <a href="course-schedule.htm">Class Schedule</a> or contact the School of Interior Redesign for more information.</p>
+          <p>To see the schedule of real estate staging training (home staging training), check the <a href="course-schedule.htm">Class Schedule</a> for more information.</p>
+          <p>To reserve your space in a real estate staging training (home staging training) class, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit it, along with your <a href="payment.htm">deposit of $500</a>. The balance is due two weeks prior to the start of class.&nbsp;One day classes must be paid in full at the time of enrollment.</p>
+          <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" -->
+          <p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p>
+          <!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" -->
+          <p align="center"><strong>For more information on any interior redesign training workshop</strong>, email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign LLC at <strong><a href="tel:203-783-1556">(203) 783-1556</a></strong> or <strong><a href="tel:877-814-0518">(877) 814-0518</a></strong> toll-free.</p>
+          <!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
         </tr>
         <tr>
           <td width="10" align="left" valign="top" class="navbar">&nbsp;</td>
