--- a/www/interior-decorating-intro.htm
+++ b/www/interior-decorating-intro.htm
@@ -116,9 +116,12 @@
 <p><strong>Cost for the One-Day Interior Redesign Seminar</strong> is $300, which includes everything you need for the day, including lunch.</p>
 <blockquote><strong>To see the schedule of upcoming classes</strong>, check the <a href="course-schedule.htm">Class Schedule</a> for more information.</blockquote>
 <blockquote><strong>To reserve your space in an&nbsp;upcoming class</strong>, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit, along with your <a href="payment.htm">deposit of $100</a>.</blockquote>
-<p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p>
-<p style="text-align: center;"><strong>For more information on any decorating, redesign or staging training workshop</strong>, email <a mailto:"info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign at <strong>(203) 783-1556</strong> or <strong>(877) 814-0518</strong> toll-free.</p>
-			<!-- InstanceEndEditable --></td>
+			  <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" -->
+  <p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p>
+<!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" -->
+<p align="center"><strong>For more information on any interior redesign training workshop</strong>, email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign LLC at <strong><a href="tel:203-783-1556">(203) 783-1556</a></strong> or <strong><a href="tel:877-814-0518">(877) 814-0518</a></strong> toll-free.</p>
+<!-- #EndLibraryItem -->
+            <!-- InstanceEndEditable --></td>
         </tr>
         <tr>
           <td width="10" align="left" valign="top" class="navbar">&nbsp;</td>
