--- a/www/interior-decorating-training-classes.htm
+++ b/www/interior-decorating-training-classes.htm
@@ -99,48 +99,23 @@
             <h1 align="center"> Interior Decorating Classes...<br />
             Become a Certified Decorating Professional<sup>&reg;</sup></h1>
             <p class="course-description">An interior decorator certificate program<br/>designed with you in mind</p>
-            <p align="left"><strong><img src="images/interior_decorating_chair.jpg" alt="Interior decorating training, interior decorating classes, interior decorating seminars, learn interior decorating or improve your existing interior decorating skills with real life interior decorating courses and interior decorating classes offered at the School of Interior Redesign in Milford CT or through our interior decorating home study courses or interior decorating training seminars." width="154" height="250" hspace="6" vspace="8" align="right" /></strong>Are you considering a <strong>career
-                in</strong> <strong>interior decorating</strong>?&nbsp; Would
-              you like to <strong>add</strong> <strong>interior
-              decorating</strong> <strong>to your current business</strong>?&nbsp; Or
-              would you like to <strong>improve your</strong> <strong>interior
-              decorating</strong> <strong>skills</strong> to feel
-              more confident as you work with your clients in your design-related
-              business?</p>
-            <p align="left">We offer <strong>real life</strong> <strong>interior
-                decorating courses</strong> that
-              will equip you with the right tools and techniques to offer your
-              clients affordable and creative solutions.&nbsp; These are not
-              courses in interior design, but courses designed so you can work
-              with a variety of clients and with every budget!</p>
-            <p align="left">More and more people are looking for advice and creative
-              ideas rather than an expensive &quot;designer&quot; solution.&nbsp; You
-              will be able to offer clients affordable interior design plans
-              and create beautiful rooms  that will improve the functionality
-              and aesthetic of a home.&nbsp; Let us help you take that first
-              step so you feel confident in your ability to decorate with style!</p>
-            <p align="left"><strong>Develop your natural talent</strong> for interior decorating
-              and begin a career doing what you love!&nbsp; Our <strong>interior
-              decorating training courses</strong> will complement any previous design training you
-              may have.&nbsp;</p>
-            <h2>Certified Decorating Professional&reg;</h2>
-            <p>The <a href="interior-decorator-training-course-3day.htm">Certified
-                Decorating Professional&reg; program</a> is
-                designed for the professional who wishes to <strong>add</strong> <strong>interior
-                decorating</strong> <strong>to existing services or for the person
-                interested in honing their skills as a Decorating Professional</strong>. </p>
-                <h2>Introduction to Interior Decorating</h2>
-                <p>The <a href="interior-decorating-intro.htm" target="_blank">Introduction to Interior Decorating</a> <strong>one-day seminar</strong> is designed for the <strong>decorating novice</strong> who wants to learn more or the <strong>seasoned staging or design professionals</strong> who would like to learn more about the in’s and out’s of interior decorating to enhance their skills.</p>
-                <h2>Certified Decorating Professional&reg; Home Study</h2>
-                <p>If you would like to become a <a href="assets/sir-certified-decorating-professional-home-study.pdf" target="_blank">Certified Decorating Professional</a>, but the distance involved is too great, learn all of the valuable information in the<strong> comfort of your own hom</strong>e. You will receive a <strong>comprehensive manual</strong> and <strong>accompanying workbook</strong> filled with everything you need to know to succeed as a <strong>decorating professional</strong>.</p>
-            <p><strong>Please Note:&nbsp; </strong></p>
+            <p align="left"><img src="images/interior_decorating_chair.jpg" alt="Interior decorating training, interior decorating classes, interior decorating seminars, learn interior decorating or improve your existing interior decorating skills with real life interior decorating courses and interior decorating classes offered at the School of Interior Redesign in Milford CT or through our interior decorating home study courses or interior decorating training seminars." width="154" height="250" hspace="6" vspace="8" align="right" />Are you considering a <strong>career in interior decorating</strong>? Would you like to <strong>add interior decorating to your current business</strong>? Or would you like to <strong>improve your interior decorating skills</strong> to feel more confident as you work with your clients in your design-related business?</p>
+      <p align="left">We offer <strong>real life</strong> <strong>interior decorating courses</strong> that will equip you with the right tools and techniques to offer your clients affordable and creative solutions. These are not courses in interior design, but courses designed so you can work with a variety of clients and with every budget!</p>
+      <p align="left">More and more people are looking for advice and creative ideas rather than an expensive &quot;designer&quot; solution. You
+       will be able to offer clients affordable interior design plans and create beautiful rooms that will improve the functionality
+       and aesthetic of a home. Let us help you take that first step so you feel confident in your ability to decorate with style!</p>
+      <p align="left"><strong>Develop your natural talent</strong> for interior decorating and begin a career doing what you love! Our <strong>interior decorating training courses</strong> will complement any previous design training you may have. </p>
+      <h2>Certified Decorating Professional&reg;</h2>
+      <p>The <a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional&reg; program</a> is designed for the professional who wishes to <strong>add</strong> <strong>interior decorating</strong> <strong>to existing services or for the person interested in honing their skills as a Decorating Professional</strong>. </p>
+        <h2>Introduction to Interior Decorating</h2>
+        <p>The <a href="interior-decorating-intro.htm" target="_blank">Introduction to Interior Decorating</a> <strong>one-day seminar</strong> is designed for the <strong>decorating novice</strong> who wants to learn more or the <strong>seasoned staging or design professionals</strong> who would like to learn more about the in’s and out’s of interior decorating to enhance their skills.</p>
+        <h2>Certified Decorating Professional&reg; Home Study</h2>
+        <p>If you would like to become a <a href="assets/sir-certified-decorating-professional-home-study.pdf" target="_blank">Certified Decorating Professional</a>, but the distance involved is too great, learn all of the valuable information in the<strong> comfort of your own hom</strong>e. You will receive a <strong>comprehensive manual</strong> and <strong>accompanying workbook</strong> filled with everything you need to know to succeed as a <strong>decorating professional</strong>.</p>
+            <p><strong>Please Note:  </strong></p>
             <p align="left">Our in-person <strong>interior
                 decorating classes</strong> are held in
               both <strong>Milford, CT</strong> <strong>and</strong> <strong>Peterborough,
-              NH</strong>.&nbsp; Please check the <a href="course-schedule.htm">Class Schedule</a> for the dates in your area. </p>
-            <p align="center"><a href="questions-interior-redesign-staging-training.htm"><em><strong>Click
-                    here for the questions you should ask ...and </strong></em><br />
-                <em><strong>what you should know about training and certification</strong></em></a><em><strong>.</strong></em></p>
+              NH</strong>.  Please check the <a href="course-schedule.htm">Class Schedule</a> for the dates in your area.</p>
             <!-- InstanceEndEditable --></td>
         </tr>
         <tr>
