MailChimp Signup Form
Replaced e-zine signup with MailChimp signup form and added http:// to MC CSS link.

--- a/www/index.htm
+++ b/www/index.htm
@@ -126,7 +126,7 @@
 <h1>Sign Up for Our Free E-zine</h1>
       <p>Want information as your business grows and changes, to help you begin your business, or just to stay in touch with the School of Interior Redesign? Then sign up for our <em><strong>free</strong></em> e-zine. </p>
 <!-- Begin MailChimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+<link href="https://cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
 </style>
@@ -158,7 +158,7 @@
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
 
-          <div style="text-align:center;"><em>[Please be assured that we will not share your information with anyone!]</em></div>
+<p>Please be assured that we will not share your personal information with anyone!</p>
       <!-- InstanceEndEditable --></td>
         </tr>
         <tr>
