--- a/www/ezine-redesign-staging-school.htm
+++ b/www/ezine-redesign-staging-school.htm
@@ -129,29 +129,39 @@
             in starting a design-related business</strong></em> and delivered
             to your email address bi-weekly.&nbsp; You
             are sure to be inspired!</p>
-          <p>&nbsp;</p>
-         
-          <form action="http://ui.constantcontact.com/d.jsp" method="post" name="ccoptin" target="_blank" id="ccoptin"><div align="center">
-            <table cellspacing="0" cellpadding="0" width="430" align="center" border="0">
-                <tbody>
-                  <tr>
-                    <td align="right" height="30"><div align="left">Enter your
-                        
-                      email address:&nbsp; </div></td>
-                    <td><input size="40" name="ea" /></td>
-                  </tr>
-                  <tr>
-                    <td valign="center" align="middle" colspan="2" height="40"><div align="center">
-                      <input type="submit" value="Subscribe to our FREE E-Zine!" name="go" />
-                      <input type="hidden" value="1101642200531" name="m" />
-                      <input type="hidden" value="oi" name="p" />
-                    </div></td>
-                  </tr>
-                </tbody>
-              </table>
-              <p>&nbsp;</p>
-              <p>[Please be assured that we will not share your information with
-                anyone!] </p>
+<!-- Begin MailChimp Signup Form -->
+<link href="https://cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+</style>
+<div id="mc_embed_signup">
+	<form action="//schoolofinteriorredesign.us12.list-manage.com/subscribe/post?u=a8ca6899e1de6103b16dc0225&amp;id=16723501ad" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+		<div id="mc_embed_signup_scroll">
+			<div class="indicates-required"><span class="asterisk">*</span> indicates required field</div>
+			<div class="mc-field-group">
+				<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span></label>
+				<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+			</div>
+			<div class="mc-field-group">
+				<label for="mce-FNAME">First Name </label>
+				<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+			</div>
+			<div class="mc-field-group">
+				<label for="mce-LNAME">Last Name </label>
+				<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+			</div>
+			<div id="mce-responses" class="clear">
+				<div class="response" id="mce-error-response" style="display:none"></div>
+				<div class="response" id="mce-success-response" style="display:none"></div>
+			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a8ca6899e1de6103b16dc0225_16723501ad" tabindex="-1" value=""></div>
+			<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+		</div>
+	</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
+<p>Please be assured that we will not share your personal information with anyone!</p>
             </div>
           </form>
           <!-- InstanceEndEditable --></td>
