--- a/www/certified-decorating-professional.htm
+++ b/www/certified-decorating-professional.htm
@@ -4,9 +4,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <!-- InstanceBeginEditable name="head-content" -->
-<meta name="title" content="x" />
-<meta name="description" content="x" />
-<meta name="keywords" content="x" />
+<meta name="title" content="Interior Decorator Certificate Program: 3-day Interior Decorating Course for your Interior Decorating Business" />
+<meta name="Description" content="Become a Certified Decorating Professional. Learn interior decorating and add interior decorating to your business through this 3 day interior decorator certificate program classes and courses." />
+<meta name="Keywords" content="Certified Decorating Professional program,interior decorator,interior decorating,training,classes,courses,certificate programs,certification,interior decorator business,seminars,study programs,CT,Connecticut,NH,New Hampshire,learn interior decorating,interior decorating certificate program,start a decorating business,become an interior decorator,interior design,School of Interior Redesign,Ann Anderson" />
 <!-- InstanceEndEditable -->
 <link href="styles/SIR_style.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
@@ -33,7 +33,7 @@
   ga('send', 'pageview');
 
 </script>
-<!-- InstanceBeginEditable name="doctitle" --><title>Untitled Document</title><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" --><title>Interior Decorator Training Classes: 3-day Certified Interior Decorating Program</title><!-- InstanceEndEditable -->
 </head>
 
 <body>
@@ -71,9 +71,9 @@
                             <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
                         </ul>
                     </li>
-                    <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
+                    <li><a href="interior-decorating-classes.htm" class="course">Interior Decorating</a>
                     	<ul>
-                        	<li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
+                        	<li><a href="interior-decorating-introduction.htm">Introduction to Interior Decorating</a></li>
                         	<li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional&reg;</a></li>
                     	</ul>
                     </li>
@@ -97,31 +97,58 @@
           <td bgcolor="#000000" align="left" valign="top" class="navbar"><img src="images/black_line.jpg" width="6" /></td>
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
-<h1>Introduction to Interior Decorating</h1>
-<p class="course-description">A one-day interior decorating seminar</p>
+            <h1 align="center">Certified Decorating Professional&reg; Program </h1>
+            <p class="course-description">A three day interior decorator training course designed for the professional who wishes to add interior decorating to their services</p>
+            <p><img src="images/iStock_000001456091XSmall.jpg" width="250" align="right"/>Would you like to <strong>add interior decorating to your
+                current business</strong> Or would you like to <strong>improve your decorating skills</strong> to feel more confident as you work with your clients in a design-related business?&nbsp; Our<strong> Certified Decorating Professional</strong>&reg; <strong>program</strong> is just what you need!</p>
+            <p><strong>What will you learn in this interior decorating course?</strong></p>
+            <ul>
+              <li>Decorating from the floor up - from finishes to finishing touches</li>
+              <li>Color - why color is important and not just for walls</li>
+              <li>Space planning and furniture arrangement - how it all fits together</li>
+              <li>Furniture - blending styles with ease</li>
+              <li>Details - accessory placement and selection</li>
+              <li>Presentations and proposals - putting together a Style File and design boards</li>
+              <li>Fabric, textures and window fashions</li>
+              <li>Creative solutions to decorating dilemmas </li>
+              <li>Communicating with your client</li>
+              <li>The art of consulting and working with other trade professionals</li>
+              <li>Studio exercises and demonstrations </li>
+            </ul>
+            <p>...and so much more!</p>
+            <p><strong>Our interior decorating certificate program includes</strong>:</p>
+            <ul>
+              <li>A comprehensive training manual</li>
+              <li>Detailed training exercises and visual presentations</li>
+              <li>Lunch, snacks and beverages</li>
+              <li>Limited seating for individual attention</li>
+              <li>Business to business support</li>
+            </ul>
+            <blockquote class="testimonial">
+            	<p>I want to thank you for an amazing class. I have been reviewing my materials and I am more excited every day&mdash;with all of it! You are an inspiration and I look forward to seeing you at the ADE conference in September.</p>
+                <em>Jill P.&mdash;Woodbury, CT</em>
+            </blockquote>
+            <p><strong>Please Note:</strong></p>
+            <p>Three-day Certified Decorating Professional&reg; classes are held in both Milford, Connecticut and Peterborough, New Hampshire. Please <a href="course-schedule.htm">check our calendar for the dates in your area</a>.</p>
 
-<p><img src="images/bigstockphoto_Luxurious_Red_Chair_With_Satin_1436879.jpg" width="200" height="324" alt="" align="right"/><strong>Have you wondered what the tips and tricks are that pros use when designing rooms? Do you have a room or rooms in your own home you’d like to really pull together? Or do you just want a better understanding of how to make it all&mdash;colors, fabrics, styles&mdash;work together.</strong> We’ve created a fun one-day seminar to teach you how to do just that!</p> 
-<p>The day begins with a get-acquainted session as we get to know each other a little better and discuss our own decorating dilemmas. Then we begin to learn how to take a room from less-than-fetching to fabulous! Included in the discussion are:</p>
-<ul>
-	<li>Basic principles of design</li>
-	<li>Where to start when decorating a room</li>
-	<li>The step-by-step process to a successful design</li>
-	<li>Understanding colors (and we’re not just talking paint)</li>
-	<li>Incorporating patterns and textures</li>
-	<li>How to make it all work together</li>
-</ul>
-<p>And we don’t just talk! We have fun creating a vision for our room – and making that vision actually work. Through hands-on exercises, we will pull together rooms of our own creation, with ideas we can take back into our homes to pull together ourselves. We’ll work with colors, fabrics, styles and incorporate the design principles to make a room that sings! Never again will you wonder "does this really go together?" You’ll know!</p>
-<p>At the end of the day you will be prepared to take everything you learned and transform your own home&mdash;starting tomorrow!</p>
-<h2>To Enroll in the Introduction to<br/>Interior Decorating Seminar:</h2>
-<p><strong>Cost for the One-Day Interior Redesign Seminar</strong> is $300, which includes everything you need for the day, including lunch.</p>
-<blockquote><strong>To see the schedule of upcoming classes</strong>, check the <a href="course-schedule.htm">Class Schedule</a> for more information.</blockquote>
-<blockquote><strong>To reserve your space in an&nbsp;upcoming class</strong>, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit, along with your <a href="payment.htm">deposit of $100</a>.</blockquote>
-			  <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" -->
-  <p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p>
-<!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" -->
-<p align="center"><strong>For more information on any interior redesign training workshop</strong>, email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign LLC at <strong><a href="tel:203-783-1556">(203) 783-1556</a></strong> or <strong><a href="tel:877-814-0518">(877) 814-0518</a></strong> toll-free.</p>
-<!-- #EndLibraryItem -->
-            <!-- InstanceEndEditable --></td>
+            <p align="left">Advanced studies in interior decorating area available
+              at the Peterborough, NH location. <a href="mailto:info@schoolofinteriorredesign.com">Contact
+              the School of Interior Redesign for details</a>.</p>
+            <p align="left">You may also be interested in the <a href="interior-decorating-home-study-course.htm">Certified Decorating Professional&reg; Home Study Program</a>.</p>
+            <h2>To Enroll in the Certified Decorating Professional&reg; Program:</h2>
+            <p><strong>Cost for th</strong><strong>is 3-day interior decorating training class </strong>is
+              $1,595, which includes <em><a href="work_files/books_redesign_staging.htm#Redesign_book"></a> </em>lunch, snacks and beverages. A $500 deposit is required to reserve
+              your space in the program. The balance is due two weeks before class begins. (Hotel and additional transportation costs are not included.)&nbsp; </p>
+            <blockquote>
+              <p><strong>To see the schedule of our interior design classes</strong>,
+                check the <a href="course-schedule.htm">Class Schedule</a> for more information.&nbsp; </p>
+              <p><strong>To reserve your space in a 3-day interior design course</strong>, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit, along with your <a href="payment.htm">deposit of $500</a>. The balance is due two weeks prior to the start of class.</p>
+            </blockquote>
+          <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" -->
+          <p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p>
+          <!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" -->
+          <p align="center"><strong>For more information on any interior redesign training workshop</strong>, email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign LLC at <strong><a href="tel:203-783-1556">(203) 783-1556</a></strong> or <strong><a href="tel:877-814-0518">(877) 814-0518</a></strong> toll-free.</p>
+          <!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
         </tr>
         <tr>
           <td width="10" align="left" valign="top" class="navbar">&nbsp;</td>
